<resources>
    <string name="app_name">TrafficApp</string>
    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="placeholder_type_value">Type Value</string>
    <string name="source">Source</string>
    <string name="placeholder_source_value">Source Value</string>
    <string name="transport">Transport</string>
    <string name="message">Message</string>
    <string name="date">Date</string>
    <string name="placeholder_transport_value">Transport Value</string>
    <string name="placeholder_message_value">Message Value</string>
    <string name="placeholder_date_value">Date Value</string>
</resources>
